<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/header2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/text_header2"
        android:textColor="@color/red"
        android:textSize="48sp" />

    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_search_button"
        android:layout_below="@+id/header2"
        android:layout_marginTop="140sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@drawable/login_button"
        android:layout_marginHorizontal="50sp"
        />

    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_settings_button"
        android:layout_below="@+id/search_button"
        android:layout_marginTop="40sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@drawable/settings_button"
        android:layout_marginHorizontal="50sp"
        />

</RelativeLayout>