<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:fontFamily="@font/roboto_bold"
        android:gravity="center"
        android:text="@string/text_header"
        android:textColor="@color/red"
        android:textSize="48sp" />
    <TextView
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_marginTop="60sp"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_login"
        android:textColor="@color/gray"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/input_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login"
        android:layout_marginTop="0sp"
        android:backgroundTint="@color/semi_gray"
        android:layout_marginHorizontal="30sp"
        android:ems="10"
        android:maxLength="35"
        android:inputType="text"/>
    <TextView
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_login"
        android:layout_marginTop="0sp"
        android:layout_marginHorizontal="30sp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/text_password"
        android:textColor="@color/gray"
        android:textSize="24sp" />
    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_marginTop="0sp"
        android:backgroundTint="@color/semi_gray"
        android:layout_marginHorizontal="30sp"
        android:ems="10"
        android:inputType="textPassword"
        android:maxLength="35"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_login_button"
        android:layout_below="@+id/input_password"
        android:layout_marginTop="120sp"
        android:textColor="@color/white"
        android:fontFamily="@font/roboto_bold"
        android:textSize="24sp"
        android:textAllCaps="false"
        android:background="@drawable/login_button"
        android:layout_marginHorizontal="15sp"
        />

</RelativeLayout>